<resources>
    <string name="app_name">RocketLaunches</string>
    <string name="launches">Launches</string>
    <string name="favorites">Favorites</string>
    <string name="wiki">Wiki</string>

    <string name="favorite">Favorite</string>

    <string name="launch_status_launching_now">Launching now</string>
    <string name="launch_status_successfully">Successfully</string>
    <string name="launch_status_failed">Failed</string>
    <string name="launch_status_in_flight">In flight</string>
    <string name="launch_status_canceled">Canceled</string>
    <string name="launch_status_scheduled">Scheduled</string>
    <string name="launch_status_hold">Hold</string>
    <string name="launch_status_unknown">Unknown</string>

    <string name="country_name_usa">USA</string>
    <string name="country_name_russia">Russia</string>
    <string name="country_name_china">China</string>
    <string name="country_name_indian">Indian</string>
    <string name="country_name_unknown">Unknown</string>

    <string name="error_no_internet">No internet connection!</string>
    <string name="error_no_internet_description">Try turn on WiFi or mobile network.\nAnd come back ;)</string>
    <string name="error_unknown">Oops, something went wrong!</string>
    <string name="error_not_found">No found</string>
    <string name="error_not_found_description">Try something else</string>

    <string name="rocket_launch_image_description">Rocket launch image</string>
    <string name="rocket_launch_favorite_button_description">Rocket launch favorite button</string>
    <string name="rocket_launch_country_flag_description">Rocket launch country flag</string>
    <string name="empty_wiki_title">Oh no!</string>
    <string name="empty_wiki_description">There is no Wiki page for this launch</string>
    <string name="empty_favorites_title">There are\nno favorites yet</string>
    <string name="empty_favorites_description">You can add any launches to Favorites by tapping on the Heart icon</string>
    <string name="search_launch">Search launches</string>
    <string name="cancel">Cancel</string>
    <string name="search_launches_description">Search launches</string>
    <string name="launch_image_description">Launch image</string>
    <string name="country_flag_description">Country flag</string>
</resources>
