<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSearchLaunchRoot"
    android:layout_width="match_parent"
    android:layout_height="@dimen/searchListItemHeight"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    tools:ignore="KeyboardInaccessibleWidget">

    <ImageView
        android:id="@+id/ivSearchLaunch"
        android:layout_width="@dimen/searchListImageHeight"
        android:layout_height="@dimen/searchListImageHeight"
        android:layout_marginStart="@dimen/baseDimen"
        android:adjustViewBounds="true"
        android:contentDescription="@string/launch_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/rocket_list_default" />

    <TextView
        android:id="@+id/tvSearchLaunchTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/greyDark"
        android:textSize="@dimen/textMediumDimen"
        app:layout_constraintEnd_toStartOf="@+id/ivSearchLaunchFlag"
        app:layout_constraintStart_toEndOf="@+id/ivSearchLaunch"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Launch title" />

    <TextView
        android:id="@+id/tvSearchLaunchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/tvSearchLaunchTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchLaunchTitle"
        tools:text="@string/launch_status_launching_now" />

    <ImageView
        android:id="@+id/ivSearchLaunchFlag"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/country_flag_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag_usa" />
</androidx.constraintlayout.widget.ConstraintLayout>